# mevideo

./: .gitignore  README.md  bump-version.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  index.css
src-tauri/: 2  Cargo.toml  check_out.txt  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binaries.rs  lib.rs
